<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timeline"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_timeline" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_adverts"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_adverts" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_profile" />

</menu>
